Create hero section

--- a/style.css
+++ b/style.css
@@ -45,3 +45,68 @@ nav {
   color: lightgray;
   font-weight: 400;
 }
+.slider {
+  background: url("https://images.unsplash.com/photo-1604147495798-57beb5d6af73?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2370&q=80");
+  /* clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%); */
+  /* overflow: hidden; */
+}
+.sliderWrapper {
+    display: flex;
+    width: 500vw;
+}
+.sliderItem{
+    width: 100vw;
+    position: relative;
+    /* transition: all 1s ease-in-out; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.sliderTitle{
+    position: absolute;
+    top: 10%;
+    color: white;
+    right: 10%;
+    z-index: 1;
+    text-align: center;
+    font-size: 60px;
+    font-weight: 900;
+}
+.sliderPrice{
+    position: absolute;
+    top: 10%;
+    color: white;
+    left: 10%;
+    z-index: 1;
+    text-align: center;
+    border: 1px solid gray;
+    font-size: 60px;
+    font-weight: 400;
+}
+.sliderImg{
+    z-index: 1;
+}
+.sliderBg{
+    width: 750px;
+    height: 750px;
+    background-color: yellow;
+    border-radius: 50%;
+    position: absolute;
+}
+.buyButton{
+    position: absolute;
+    top: 50%;
+    right: 10%;
+    color: white;
+    z-index: 1;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 900;
+    border: 1px solid gray;
+    background-color: black;
+    cursor: pointer;
+}
+.buyButton:hover{
+    color: black;
+    background-color: white;
+}
