--- a/style.css
+++ b/style.css
@@ -30,8 +30,29 @@
   border: none;
   border-bottom: 1px solid gray;
 }
-.payButton{
+.payButton {
   box-shadow: 2px 1px 12px 6px rgba(0, 0, 0, 0.61);
   -webkit-box-shadow: 2px 1px 12px 6px rgba(0, 0, 0, 0.61);
   -moz-box-shadow: 2px 1px 12px 6px rgba(0, 0, 0, 0.61);
+}
+.footerLeft {
+  flex: 2;
+  padding: 50px;
+}
+.fMenuList {
+  padding: 0;
+}
+.fListItem{
+  margin-bottom: 10px;
+  color: gray;
+  cursor: pointer;
+}
+.footerRight{
+  padding: 50px;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: space-between; */
+}
+.fInput{
+  /* padding: 5px; */
 }
